--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="EtonBlue">#88d498</color>
-    <color name="EagleGreen">#114b5f</color>
+    <color name="EagleGreen">#114B5F</color>
     <color name="IlluminatingEmerald">#1a936f</color>
     <color name="PastelGray">#c6dabf</color>
     <color name="EggShell">#f3e9d2</color>
